--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,25 @@ body {
 	font-family: 'Roboto', sans-serif;
   
 
+
+}
+
+.goalBox {
+  height: 145px;
+
+}
+
+.thumbnail {
+
+  height: 350px;
+  border: 1px solid #000;
+  margin-top: 20px;
+  box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.298);
+}
+
+.thumbnail:hover {
+
+  background: rgba(250, 250, 250, 0.978);
 }
 
 .jumbotron {
@@ -166,7 +185,12 @@ h3 {
   font-size: 16px;
 }
 
-p {
+
+h6 {
+
+  font-family: 'Press Start 2P', cursive;
+  color: white;
+  font-family: 6px;
 
 
 
