--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,11 +39,15 @@ body {
 
 .navbar-default {
 
-  background: rgba(250, 250, 250, .8);
+  background: rgba(250, 250, 250, .68);
   border: 0px;
 
 }
 
+.downward {
+
+  margin-top: 45px;
+}
 .navbar-nav li {
 
   padding-top: 7px;
@@ -100,12 +104,26 @@ a{
 
 
 }
+
+.navbar-default {
+
+  margin-bottom: 0px;
+  border-bottom: 1px solid #D3D3D3;
+}
+
+.middleBanner {
+  background: rgba(250, 250, 250, 0.49);
+   box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.298);
+  padding: 20px;
+
+}
+
 .test {
   background-color: red;
   z-index: 1000;
 }
 .mainArea {
-  height: 300px;
+  height: 375px;
 }
 .image-center {
     margin: 0 auto;
@@ -121,6 +139,15 @@ a{
 
 }
 
+.flipped {
+
+  -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+}
 
 .material-icons.md-48 { 
 	font-size: 48px; 
@@ -178,6 +205,11 @@ a{
 
 /* Fonts */
 
+h2 {
+
+  font-family: 'Press Start 2P', cursive;
+  font-size: 24px;
+}
 h3 {
 
   font-family: 'Press Start 2P', cursive;
