--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,14 +11,19 @@ body {
 
 .footer {
 
- background: rgba(0, 0, 0, 0.28);
+ background: rgba(0, 0, 0, .3);
+ padding-bottom: 20px;
 
 
 }
+.logoArea {
 
+  background-color: black;
+}
 .top {
 
   height: 450px;
+
 }
 
 .thumbnail {
@@ -123,10 +128,16 @@ a{
   border-bottom: 1px solid #D3D3D3;
 }
 
-.middleBanner {
+.titleBanner {
   background: rgba(250, 250, 250, 0.49);
-   box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.298);
+   box-shadow: 5px 2px 2px 2px rgba(0, 0, 0, 0.298);
   padding: 20px;
+
+  /*border: 1px  #CCC solid;
+
+    box-shadow: 
+        inset 0px 11px 8px -10px #CCC,
+        inset 0px -11px 8px -10px #CCC; */
 
 }
 
@@ -172,7 +183,6 @@ a{
 #doneQuests {
 	text-align: right;
 }
-
 
 .form-signin {
   max-width: 380px;
@@ -246,3 +256,4 @@ h6 {
 
 }
 
+@media 
