--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,78 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-
-	<!--Google Font 1-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
-    <!--Google Font 3-->
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<!--Google Font 3-->
-    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-    <!--Bootstrap CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-    rel="stylesheet">
-    <!--Font Awesome CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    rel="stylesheet">
-    <!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <!--Bootstrap CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <!--Font Awesome CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript" src="public/assets/js/modal.js"></script>
-
-     <!--CSS Stylesheet-->
-    <link href="public/assets/css/style.css" rel="stylesheet" type="text/css">
- 
-
-		<title>Quest</title>
-	</head>
-	<body>
-
-					{{{ body }}}
-
-
-	</body>
-</HTML>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+        
         <script src="https://code.jquery.com/jquery.js"></script>
+        <script type="text/javascript" src="/assets/js/modal.js"></script>
+
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
 
         <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
 
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-        <title>Quest</title>
+        <title>LifeQuest</title>
     </head>
     <body>
-        <div class="container">
-            <div class="jumbotron">
-                <h1><b><i>LIFE QUEST</i></b> <i class="material-icons md-48">games</i></h1>
-
-            </div>
-            
-
-
+    
                     {{{ body }}}
 
-    
-        </div>
-
-
     </body>
-</HTML> -->
+
+</HTML>
+
