updated handlebars files

--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -186,9 +186,9 @@
 
         <!--Inside Close-->
         <p class="text-center space"><a data-popup-close="popup-1" href="#">Close</a></p>
-
         <!--Outside Close-->
         <a class="popup-close" data-popup-close="popup-1" href="#">x</a>
+        <!--END-->
 
 
     </div>
