--- a/views/characterCreate.handlebars
+++ b/views/characterCreate.handlebars
@@ -3,16 +3,16 @@
 			<form class = "create-update-form" action="/quests/charcreate" method="POST">
 
 				<h4><b>Please enter your user name</b></h4>
-					<input type="text" id="nameInput" name="name">
+					<input type="text" id="nameInput" name="name" required>
 				<br>
 				<h4><b>Link to your photo</b></h4>
-					<input type="text" id="picUrl" name="photo">
+					<input type="text" id="picUrl" name="photo" required>
 				<br>
 				<h4><b>Enter your email</b></h4>
-					<input type="text" id="emailInput" name="email">
+					<input type="text" id="emailInput" name="email" required>
 				<br>
 				<h4><b>Create a password</b></h4>
-					<input type="password" id="passInput" name="password">
+					<input type="password" id="passInput" name="password" required>
 				<br>
 				<br>
 					<button id="createBtn" class="btn btn-primary">Create Player</button>
