--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,10 +3,10 @@
 	<form class = "create-update-form" action="/quests/login" method="POST">
 
 				<h4><b>Email</b></h4>
-					<input type="text" id="userEmail" name="email">
+					<input type="text" id="userEmail" name="email" required>
 				<br>
 				<h4><b>Password</b></h4>
-					<input type="password" id="pass" name="password">
+					<input type="password" id="pass" name="password" required>
 				<br>
 				<br>
 					<button id="loginBtn" class="btn btn-primary">Login</button>
